fix change-shift

--- a/src/app/dashboard/widgets/change-shift/change-shift.component.scss
+++ b/src/app/dashboard/widgets/change-shift/change-shift.component.scss
@@ -245,7 +245,7 @@
         height: 104.62px;
         border-radius: 50%;
         margin: 0 auto;
-        background-color: #333333;
+        background-color: var(--color-bg-active); //temp
       }
 
       &__info {
@@ -264,7 +264,7 @@
           width: 35px;
           height: 35px;
           border-radius: 50%;
-          background-color: #333333;
+          background-color: var(--color-bg-active); //temp
         }
 
         &:last-child {
