--- a/src/app/dashboard/widgets/change-shift/shift-person/shift-person.component.scss
+++ b/src/app/dashboard/widgets/change-shift/shift-person/shift-person.component.scss
@@ -60,7 +60,7 @@
       width: 50px;
       height: 50px;
       border-radius: 50%;
-      background-color: #333333;
+      background-color: var(--color-bg-active); //temp
     }
 
     &__info {
@@ -119,7 +119,7 @@
           width: 10px;
           height: 10px;
           border-radius: 50%;
-          background-color: #333333;
+          background-color: var(--color-bg-active); //temp
         }
       }
     }
